@@ -475,7 +475,6 @@ package provide cadwidgets::Ged 1.0
 	method pane_pmodel2view {_pane args}
 	method pane_png {_pane args}
 	method pane_pngwf {_pane args}
-	method pane_pov {_pane args}
 	method pane_preview {_pane args}
 	method pane_protate_mode {_pane args}
 	method pane_ps {_pane args}
@@ -539,7 +538,6 @@ package provide cadwidgets::Ged 1.0
 	method pmodel2view {args}
 	method png {args}
 	method pngwf {args}
-	method pov {args}
 	method prcolor {args}
 	method prefix {args}
 	method preview {args}
@@ -3110,14 +3108,6 @@ package provide cadwidgets::Ged 1.0
     eval $mGed pngwf $itk_component($_pane) $args
 }
 
-::itcl::body cadwidgets::Ged::pane_pov {_pane args} {
-    eval $mGed pov $itk_component($_pane) $args
-}
-
-::itcl::body cadwidgets::Ged::pane_preview {_pane args} {
-    eval $mGed preview $itk_component($_pane) $args
-}
-
 ::itcl::body cadwidgets::Ged::pane_protate_mode {_pane args} {
     eval $mGed protate_mode $itk_component($_pane) $args
 }
@@ -3383,10 +3373,6 @@ package provide cadwidgets::Ged 1.0
 
 ::itcl::body cadwidgets::Ged::pngwf {args} {
     eval $mGed pngwf $itk_component($itk_option(-pane)) $args
-}
-
-::itcl::body cadwidgets::Ged::pov {args} {
-    eval $mGed pov $itk_component($itk_option(-pane)) $args
 }
 
 ::itcl::body cadwidgets::Ged::prcolor {args} {
@@ -6349,7 +6335,6 @@ package provide cadwidgets::Ged 1.0
     $help add pmat		{{} {get the perspective matrix}}
     $help add pmodel2view	{{} {get the pmodel2view matrix}}
     $help add png		{{[-c r/g/b] [-s size] file} {creates a png file of the current view (wireframe only)}}
-    $help add pov		{{args}	{experimental:  set point-of-view}}
     $help add prcolor		{{} {print color and material table}}
     $help add prefix		{{new_prefix object(s)} {prefix each occurrence of object name(s)}}
     $help add preview		{{[-v] [-d sec_delay] [-D start frame] [-K last frame] rt_script_file} {preview new style RT animation script}}
